--- a/BERT_finetuning.ipynb
+++ b/BERT_finetuning.ipynb
@@ -536,7 +536,7 @@
         "colab_type": "text"
       },
       "source": [
-        "This file has the code related to BERT finetuning with Dropout and Mixout regularization. We import the file, split into train, test, validation and tokenize the sentenses using Bert Tokenizer. Then model is imported from huggingface transformer and added a classifier for multiclass classification"
+        "This file has the code related to BERT finetuning with Mixout regularization. We import the file, split into train, test, validation and tokenize the sentenses using Bert Tokenizer. Then model is imported from huggingface transformer and added a classifier for multiclass classification"
       ]
     },
     {
@@ -1933,7 +1933,7 @@
         "outputId": "cbb7ac28-0419-40a4-f81e-8d6a0c3df6ea"
       },
       "source": [
-        "#Trigger the classifer for training\n",
+        "#Trigger the classifier for training\n",
         "\n",
         "set_seed(42)    # Set seed for reproducibility\n",
         "bert_classifier, optimizer, scheduler = initialize_model(epochs=2)\n",
