--- a/extraction.ipynb
+++ b/extraction.ipynb
@@ -39,6 +39,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1eUN4Gnq4RI9",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Twitter Data Extraction"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "evtJqlh54WNI",
+        "colab_type": "text"
+      },
+      "source": [
+        "This section contains code for tweets extraction from Twitter. Here, set of hashtags have been used to filter the data. Due to the limitations of twitter for data extraction, iterated through hashtags and date by specifiying range multiple times to fullfil the requirements. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "u-0Cj_xV73sl",
@@ -181,15 +201,12 @@
         "outputId": "0f3fc1ce-ce43-48c7-b8cd-f29d8bcfb81c"
       },
       "source": [
-        "# Defining news sources I want to include\n",
+        "# Defining hashtags and dates\n",
         "hashtag = [\"#COVID19\"]\n",
         "start=['2020-03-01','2020-03-02','2020-03-03']\n",
         "end=['2020-03-02','2020-03-03','2020-03-04']\n",
         "\n",
         "# getting tweets from the defined new sources, \n",
-        "# only including top tweets, \n",
-        "# looking at the past week with the end_date not inclusive,\n",
-        "# and specifying that we want a max number of tweets = 100.\n",
         "# also sorting the tweets by date, descending.\n",
         "df=pd.DataFrame()\n",
         "for hash in hashtag:\n",
@@ -360,20 +377,23 @@
       "source": [
         "import time\n",
         "\n",
+        "#Hashtags and date ranges for extraction\n",
+        "\n",
         "hashtag = [\"#StayHome\",\"#coronavirus\",\"#pandemic\",\"#lockdown\",\"#COVID-19\"]\n",
         "x=pd.date_range(start='03/01/2020', periods=10)\n",
         "y=pd.date_range(start='03/02/2020', periods=10)\n",
         "start=pd.Series(x.format()).tolist()\n",
         "end=pd.Series(y.format()).tolist()\n",
         "\n",
-        "# getting tweets from the defined new sources, \n",
-        "# only including top tweets, \n",
-        "# looking at the past week with the end_date not inclusive,\n",
-        "# and specifying that we want a max number of tweets = 100.\n",
+        "# getting tweets from the defined hashtags\n",
         "# also sorting the tweets by date, descending.\n",
+        "\n",
+        "#Define dataframes \n",
         "df1=pd.DataFrame()\n",
         "df2=pd.DataFrame()\n",
         "df3=pd.DataFrame()\n",
+        "\n",
+        "#Iterate through hashtags and dates to gather the data\n",
         "for hash in hashtag:\n",
         "  for a,b in zip(start,end): \n",
         "    df1 = df1.append(get_tweets(hash, \n",
@@ -383,10 +403,14 @@
         "                    max_tweets = 1000).sort_values('Date',ascending=False))\n",
         "  time.sleep(900)\n",
         "time.sleep(900)\n",
+        "\n",
+        "#Define data range\n",
         "x=pd.date_range(start='03/11/2020', periods=10)\n",
         "y=pd.date_range(start='03/12/2020', periods=10)\n",
         "start=pd.Series(x.format()).tolist()\n",
         "end=pd.Series(y.format()).tolist()\n",
+        "\n",
+        "#Iterate through hashtags and dates\n",
         "for hash in hashtag:\n",
         "  for a,b in zip(start,end): \n",
         "    df2 = df2.append(get_tweets(hash, \n",
@@ -396,6 +420,8 @@
         "                    max_tweets = 1000).sort_values('Date',ascending=False))\n",
         "  time.sleep(900)\n",
         "time.sleep(900)\n",
+        "\n",
+        "#Define data ranges, iterate through hashtags and dates for data\n",
         "x=pd.date_range(start='03/21/2020', periods=10)\n",
         "y=pd.date_range(start='03/22/2020', periods=10)\n",
         "start=pd.Series(x.format()).tolist()\n",
@@ -409,22 +435,9 @@
         "                    max_tweets = 1000).sort_values('Date',ascending=False))\n",
         "  time.sleep(900)\n",
         "    \n",
+        "#Concatenate dataframes and save in a file    \n",
         "df=pd.concat([df1,df2,df3])\n",
         "df.to_csv(\"/content/gdrive/My Drive/Colab Notebooks/test1.csv\", index=None, encoding='utf-8')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QdlR26DVmL-e",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "df=pd.concat([df1,df2,df3])\n",
-        "df.to_csv(\"/content/gdrive/My Drive/Colab Notebooks/test.csv\", index=None, encoding='utf-8')"
       ],
       "execution_count": null,
       "outputs": []
@@ -445,13 +458,10 @@
         "end=pd.Series(y.format()).tolist()\n",
         "\n",
         "# getting tweets from the defined new sources, \n",
-        "# only including top tweets, \n",
-        "# looking at the past week with the end_date not inclusive,\n",
-        "# and specifying that we want a max number of tweets = 100.\n",
         "# also sorting the tweets by date, descending.\n",
         "df1=pd.DataFrame()\n",
         "\n",
-        "\n",
+        "Iterate through hashtags and dates\n",
         "for hash in hashtag:\n",
         "  for a,b in zip(start,end): \n",
         "    df1 = df1.append(get_tweets(hash, \n",
@@ -461,84 +471,11 @@
         "                    max_tweets = 1000).sort_values('Date',ascending=False))\n",
         "    time.sleep(30)\n",
         "\n",
+        "#Save the data into a file\n",
         "df1.to_csv(\"/content/gdrive/My Drive/Colab Notebooks/test1.csv\", index=None, encoding='utf-8')"
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ysGc1kvzCT5i",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "68c95ee4-debd-4b15-dba2-94530f3ecd6e"
-      },
-      "source": [
-        "len(df1)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "19760"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 11
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-0NVOMAj1qX3",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "df1.to_csv(\"/content/gdrive/My Drive/Colab Notebooks/stayhome.csv\", index=None, encoding='utf-8')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fUrPFEFLC-xe",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "365d8b0b-0979-41d8-b608-13237f29c025"
-      },
-      "source": [
-        "import datetime\n",
-        "datetime.datetime.now()"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "datetime.datetime(2020, 7, 8, 10, 55, 43, 508312)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 19
-        }
-      ]
     },
     {
       "cell_type": "code",
