--- a/Data_Exploration.ipynb
+++ b/Data_Exploration.ipynb
@@ -25,6 +25,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_k6onSF77vHP",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Data Exploration"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y1jL-xB274I6",
+        "colab_type": "text"
+      },
+      "source": [
+        "This file contains the code for data exploration steps performed. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1KrX9ab30Amy",
@@ -36,6 +56,7 @@
         "outputId": "d1c20ff0-b135-4888-ff48-bbe16a16624d"
       },
       "source": [
+        "#Mount Google Drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
@@ -62,6 +83,7 @@
         "colab": {}
       },
       "source": [
+        "#Import libraries\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
@@ -80,6 +102,7 @@
         "colab": {}
       },
       "source": [
+        "#Load file into Colab\n",
         "df=pd.read_csv(\"/content/gdrive/My Drive/Colab Notebooks/covid_labelled.csv\", encoding='utf-8')"
       ],
       "execution_count": null,
@@ -249,6 +272,7 @@
         "colab": {}
       },
       "source": [
+        "#Drop columns not needed\n",
         "df.drop(columns=['neg','neu','pos','Textblob_Polarity'],inplace=True,axis=1)"
       ],
       "execution_count": null,
@@ -600,6 +624,7 @@
         "outputId": "e2667dfb-9bb2-41fc-8564-dcfe3509b4b3"
       },
       "source": [
+        "#Checking null values in tweet text column\n",
         "df['Text'].isnull().sum() # Display Null Tweet_text values count"
       ],
       "execution_count": null,
@@ -626,6 +651,7 @@
         "colab": {}
       },
       "source": [
+        "#Creating seperate columns for date and time from timestamp value\n",
         "df['Tweet_Date'] = pd.to_datetime(df['Date']).dt.date\n",
         "df['Tweet_Time'] = pd.to_datetime(df['Date']).dt.time"
       ],
@@ -640,6 +666,7 @@
         "colab": {}
       },
       "source": [
+        "#Drop date column\n",
         "df.drop(columns=['Date'],axis=1,inplace=True)"
       ],
       "execution_count": null,
@@ -784,6 +811,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gNuJELRF9P1q",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Barplot of Number of tweets vs Date"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "K4d9V_EB4S5K",
@@ -795,6 +832,8 @@
         "outputId": "6541a27a-6f00-45ae-b865-77a3f64d848b"
       },
       "source": [
+        "#Plot number of tweets vs dates where maximum tweets registered. Top 30 are taken\n",
+        "\n",
         "date_cnt = df['Tweet_Date'].value_counts().sort_values(ascending=False).head(30)         # get count values as per Created Date column values \n",
         "#date_cnt = date_cnt.sort_index()\n",
         "plt.figure(figsize=(14,6))\n",
@@ -823,6 +862,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LfRMwMZ89c31",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Doughnut Chart of Day of the week vs Tweet percentage"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "a40u3CaFUxs-",
@@ -830,6 +879,8 @@
         "colab": {}
       },
       "source": [
+        "#Extract day of the week using tweet date\n",
+        "\n",
         "df['Tweet_Date'] = pd.to_datetime(df['Tweet_Date'], errors='coerce')\n",
         "df['tweeted_day_of_week'] = df['Tweet_Date'].dt.day_name()   # Get Day of week from Created Date column"
       ],
@@ -992,7 +1043,7 @@
         "outputId": "02975d60-fbd8-436e-e65b-c02d15bf9fb6"
       },
       "source": [
-        "   \n",
+        "#Plot Doughnut chart for tweet percentage and day of the week   \n",
         "\n",
         "cnt_ = df['tweeted_day_of_week'].value_counts()                         # Get week day value count to plot Donut-Chart for tweets\n",
         "cnt_ = cnt_.sort_index() \n",
@@ -1105,147 +1156,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "uQ3y7JlRaeuu",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 621
-        },
-        "outputId": "e2af97b0-099d-4f49-f91e-04a368bd8ed5"
+        "id": "VWV4-QMI9sl2",
+        "colab_type": "text"
       },
       "source": [
-        "df.head()"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>User</th>\n",
-              "      <th>Text</th>\n",
-              "      <th>Favorites</th>\n",
-              "      <th>Retweets</th>\n",
-              "      <th>Mentions</th>\n",
-              "      <th>HashTags</th>\n",
-              "      <th>vader_polarity</th>\n",
-              "      <th>Num_Sentiment</th>\n",
-              "      <th>Tweet_Date</th>\n",
-              "      <th>Tweet_Time</th>\n",
-              "      <th>tweeted_day_of_week</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>KendallHarmon6</td>\n",
-              "      <td>stat news speed critical spreads in officials ...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>#coronavirus #USA #economy #covid19 #globalisa...</td>\n",
-              "      <td>-0.3182</td>\n",
-              "      <td>-1</td>\n",
-              "      <td>2020-03-01</td>\n",
-              "      <td>23:59:17</td>\n",
-              "      <td>Sunday</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Switzercomau</td>\n",
-              "      <td>first australian now passed away from coronavi...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>#australia #ausnews #breakingnews #worldnews #...</td>\n",
-              "      <td>0.0000</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2020-03-01</td>\n",
-              "      <td>23:45:00</td>\n",
-              "      <td>Sunday</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>TushK11</td>\n",
-              "      <td>new york magazine new coronavirus cases confir...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>@googlenews</td>\n",
-              "      <td>#coronavirususa #StockMarket #COVID19 #stocks</td>\n",
-              "      <td>-0.3412</td>\n",
-              "      <td>-1</td>\n",
-              "      <td>2020-03-01</td>\n",
-              "      <td>23:41:02</td>\n",
-              "      <td>Sunday</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>StockDaddy0</td>\n",
-              "      <td>still not friday lows but we moving let s see ...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>#DoctorWho #COVID #March1st #SundayThoughts #C...</td>\n",
-              "      <td>-0.3300</td>\n",
-              "      <td>-1</td>\n",
-              "      <td>2020-03-01</td>\n",
-              "      <td>23:39:19</td>\n",
-              "      <td>Sunday</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>murtdoc</td>\n",
-              "      <td>things look bleak oil barrel seems easy target...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>#Oil #stock #COVID19 #financialcrush2020</td>\n",
-              "      <td>-0.0258</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2020-03-01</td>\n",
-              "      <td>23:38:43</td>\n",
-              "      <td>Sunday</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "             User  ... tweeted_day_of_week\n",
-              "0  KendallHarmon6  ...              Sunday\n",
-              "1    Switzercomau  ...              Sunday\n",
-              "2         TushK11  ...              Sunday\n",
-              "3     StockDaddy0  ...              Sunday\n",
-              "4         murtdoc  ...              Sunday\n",
-              "\n",
-              "[5 rows x 11 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 19
-        }
+        "## Sentiment variation plot with Vader polarity for the entire tweet period considered"
       ]
     },
     {
@@ -1260,7 +1177,7 @@
         "outputId": "2001d39e-bd69-4eff-a37f-98b52cf4211a"
       },
       "source": [
-        "#Sentiment by Dates\n",
+        "#Sentiment variation by dates for the entire period\n",
         "\n",
         "#df['Tweet_Date']= df['Tweet_Date'].dt.strftime('%Y-%m-%d')\n",
         "\n",
@@ -1294,6 +1211,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FXSu0nCl9_vi",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Retweet count vs Polarity "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "wXX9Z3_CsvFm",
@@ -1305,7 +1232,7 @@
         "outputId": "7f2cade9-3fa4-4405-a737-73612204e89b"
       },
       "source": [
-        "#Retweet_Count vs Sentiments for Country\n",
+        "#Retweet_Count vs Sentiment polarity \n",
         "sns.set(style=\"darkgrid\")\n",
         "\n",
         "sns.jointplot(y='Retweets' , x='vader_polarity',\n",
@@ -1342,6 +1269,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HV2RcG14-FNs",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Wordcloud representation for All Tweets"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3PiUWM6EtU6V",
@@ -1365,6 +1302,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F_NQ7FCZ-Lm5",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Worcloud representation for Positive Tweets"
+      ]
     },
     {
       "cell_type": "code",
@@ -1405,6 +1352,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O0v8GYoA-PkH",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Wordcloud representation for Negative tweets"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "As4wFC9K0cFR",
@@ -1443,6 +1400,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dWyFrGYb-Ubl",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Wordcloud representation for Neutral Tweets"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "aoPLagZx0ojP",
@@ -1479,6 +1446,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DjQVhYr4-cAw",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Creating Target labels from Polarity score"
+      ]
     },
     {
       "cell_type": "code",
@@ -1677,6 +1654,7 @@
         "outputId": "bda60c55-2d5f-412d-e1fa-d8a96beb89ee"
       },
       "source": [
+        "#Group wise count for each sentiment\n",
         "temp = df.groupby('sentiment').count()['Text'].reset_index().sort_values(by='Text',ascending=False)  # get the count of each sentiment\n",
         "temp.style.background_gradient(cmap='Purples')"
       ],
@@ -1726,6 +1704,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NO-c99yB-uqa",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Barplot and Funnel chart for Group by count of each sentiment category"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "B92AiWR8GbFm",
@@ -1737,6 +1725,7 @@
         "outputId": "098f49e1-e168-404b-a386-3472026bfe30"
       },
       "source": [
+        "#Barplot of categories\n",
         "plt.figure(figsize=(12,6))                   #Barplot for sentiment count across input dataset\n",
         "sns.countplot(x='sentiment',data=df)"
       ],
