--- a/Polarity_assignment.ipynb
+++ b/Polarity_assignment.ipynb
@@ -25,6 +25,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C3asOFuGAzyL",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Polarity Score assignment for tweet text"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3wPtcQH4B4UO",
+        "colab_type": "text"
+      },
+      "source": [
+        "This file contains polarity assignments using Vader and Textblob NLP libraries."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "v0nRJdP0BO5A",
@@ -66,6 +86,7 @@
         "outputId": "ffdf8619-141e-4c5c-8709-bc762ee22538"
       },
       "source": [
+        "#Mount google drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
@@ -88,6 +109,7 @@
         "colab": {}
       },
       "source": [
+        "#Import libraries\n",
         "import pandas as pd\n",
         "import numpy as np \n",
         "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
@@ -107,6 +129,7 @@
         "colab": {}
       },
       "source": [
+        "#Read file from Google Drive\n",
         "df=pd.read_csv(\"/content/gdrive/My Drive/Colab Notebooks/covid_cleaned.csv\", encoding='utf-8')"
       ],
       "execution_count": null,
@@ -159,6 +182,7 @@
         "colab": {}
       },
       "source": [
+        "#Drop location column as it has no data\n",
         "df.drop(columns=['location'],axis=1,inplace=True)"
       ],
       "execution_count": null,
@@ -325,6 +349,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PZP3PTWYBL6C",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Vader Polarity"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "CZpc2ZFcBXiM",
@@ -352,6 +386,7 @@
         "outputId": "da622b2a-7012-419a-cf07-79a0510ba148"
       },
       "source": [
+        "#Histogram plot of vader sentiment scores\n",
         "fig = plt.figure(figsize=(10,5))    \n",
         "ax = fig.add_subplot(111)\n",
         "sns.distplot(df['vader_polarity'], bins=15, ax=ax)     # Plot histogram plot to know distribution of sentiment \n",
@@ -372,6 +407,16 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g7crcqsRBVCu",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Textblob polarity"
       ]
     },
     {
@@ -563,6 +608,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OvkbtLx4BZw1",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Histogram plot of Vader and Texblob polarity scores"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "hNvyAhvLGnSn",
@@ -610,6 +665,16 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FOh6Q-neBkOn",
+        "colab_type": "text"
+      },
+      "source": [
+        "After checking the distribution for both the polarity scores, Vader has given more uniform distribution than Texblob scores. Hence assigning labels as per vader scores for the tweets"
       ]
     },
     {
@@ -805,6 +870,7 @@
         "colab": {}
       },
       "source": [
+        "#Saving labelled tweets file to google drive\n",
         "df.to_csv(\"/content/gdrive/My Drive/Colab Notebooks/covid_labelled.csv\", index=None, encoding='utf-8')"
       ],
       "execution_count": null,
