--- a/XLNET_model.ipynb
+++ b/XLNET_model.ipynb
@@ -275,6 +275,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KrT2F0LFWYBO",
+        "colab_type": "text"
+      },
+      "source": [
+        "# XLNet Finetuning with Dropout"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hOejz6PaWcMO",
+        "colab_type": "text"
+      },
+      "source": [
+        "This section of the file contains XLNet finetuning with dropout regularization. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "BhfXbwfVYVIC",
@@ -390,7 +410,12 @@
         "from tqdm import tqdm, trange\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
-        "\n"
+        "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix\n",
+        "from torch.autograd.function import InplaceFunction\n",
+        "import torch.nn.init as init\n",
+        "import torch.nn.functional as F\n",
+        "\n",
+        "from torch.nn import Parameter\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -407,7 +432,7 @@
         "outputId": "15511345-a651-4d29-a0ec-1abe0bb42924"
       },
       "source": [
-        "import torch\n",
+        "#For GPU usage\n",
         "\n",
         "if torch.cuda.is_available():       \n",
         "    device = torch.device(\"cuda\")\n",
@@ -438,6 +463,7 @@
         "colab": {}
       },
       "source": [
+        "#Read file from Google Drive\n",
         "df=pd.read_csv(\"/content/gdrive/My Drive/Colab Notebooks/covid_labelled.csv\", encoding='utf-8',usecols=['Text','Num_Sentiment'])"
       ],
       "execution_count": null,
@@ -539,6 +565,7 @@
         "colab": {}
       },
       "source": [
+        "#Mapping labels\n",
         "df.loc[:,'sentiment'] = df.Num_Sentiment.map({-1:'Negative',0:'Neutral',1:'Positive'})"
       ],
       "execution_count": null,
@@ -650,6 +677,7 @@
         "outputId": "be0d7a3e-9846-4936-a1d6-d2c6e520867b"
       },
       "source": [
+        "#One hot encoding of target labels\n",
         "one_hot = pd.get_dummies(df[\"sentiment\"])\n",
         "df.drop(['Num_Sentiment','sentiment'],axis=1,inplace=True)\n",
         "df = pd.concat([df,one_hot],axis=1)\n",
@@ -751,7 +779,7 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
+        "#Split data into train and test\n",
         "\n",
         "train,test =\\\n",
         "    train_test_split(df, test_size=0.2, random_state=42)"
@@ -767,6 +795,7 @@
         "colab": {}
       },
       "source": [
+        "#Function for tokenizer\n",
         "def plot_sentence_embeddings_length(text_list, tokenizer):\n",
         "    tokenized_texts = list(map(lambda t: tokenizer.tokenize(t), text_list))\n",
         "    tokenized_texts_len = list(map(lambda t: len(t), tokenized_texts))\n",
@@ -801,6 +830,7 @@
         "outputId": "0f79fa2f-6a51-441f-9107-6c8662830324"
       },
       "source": [
+        "#Initialize tokenizer\n",
         "tokenizer = XLNetTokenizer.from_pretrained('xlnet-base-cased', do_lower_case=True)"
       ],
       "execution_count": null,
@@ -1429,6 +1459,7 @@
         "colab": {}
       },
       "source": [
+        "#Function to train the model. \n",
         "def train(model, num_epochs,\\\n",
         "          optimizer,\\\n",
         "          train_dataloader, valid_dataloader,\\\n",
@@ -1588,7 +1619,8 @@
       },
       "source": [
         "#config = XLNetConfig()\n",
-        "        \n",
+        "#Initializee XLNet model and add classifier \n",
+        "\n",
         "class XLNetForMultiLabelSequenceClassification(torch.nn.Module):\n",
         "  \n",
         "  def __init__(self, num_labels=2):\n",
@@ -1842,6 +1874,8 @@
         "colab": {}
       },
       "source": [
+        "#Initialize optimizer\n",
+        "\n",
         "optimizer = AdamW(model.parameters(), lr=2e-5, weight_decay=0.01, correct_bias=False)\n",
         "#scheduler = WarmupLinearSchedule(optimizer, warmup_steps=num_warmup_steps, t_total=num_total_steps)  # PyTorch scheduler"
       ],
@@ -1860,6 +1894,7 @@
         "outputId": "4d4149a6-62ec-436b-ebeb-a3f764420946"
       },
       "source": [
+        "#Define training epocs and train the model\n",
         "num_epochs=2\n",
         "\n",
         "cwd = os.getcwd()\n",
@@ -1944,7 +1979,7 @@
         "outputId": "f38c7149-c283-4fe0-a200-4dd587be3a7d"
       },
       "source": [
-        "# Plot loss\n",
+        "# Plot loss vs number of epochs\n",
         "num_epochs = np.arange(len(train_loss_set))\n",
         "\n",
         "fig, ax = plt.subplots(figsize=(10, 5));\n",
@@ -1993,6 +2028,7 @@
         "colab": {}
       },
       "source": [
+        "#Load model from saved \n",
         "cwd = os.getcwd()\n",
         "model_save_path = output_model_file = os.path.join(cwd, \"gdrive/My Drive/Colab Notebooks/xlnet_tweet_nosampling.bin\")\n",
         "model, start_epoch, lowest_eval_loss, train_loss_hist, valid_loss_hist = load_model(model_save_path)"
@@ -2008,6 +2044,7 @@
         "colab": {}
       },
       "source": [
+        "#Function to predict the model on test data\n",
         "def generate_predictions(model, df, num_labels, device=\"cpu\", batch_size=32):\n",
         "  num_iter = math.ceil(df.shape[0]/batch_size)\n",
         "  \n",
@@ -2097,7 +2134,7 @@
         "outputId": "533dfba8-0e8c-4984-b95c-2caa34b60b33"
       },
       "source": [
-        "from sklearn.metrics import accuracy_score\n",
+        "#Print accuracy score\n",
         "y_test=test.iloc[:,1:4].values\n",
         "accuracy_score(y_test,a)"
       ],
@@ -2129,7 +2166,7 @@
         "outputId": "040966ea-1b97-421c-bd84-e9b85c24b889"
       },
       "source": [
-        "from sklearn.metrics import classification_report\n",
+        "#Print classification report\n",
         "print('\\nClassification Report\\n')\n",
         "y_pred=np.round(pred_probs)\n",
         "print(classification_report(y_test, a, target_names=['Negative', 'Neutral', 'Positive']))"
@@ -2178,7 +2215,7 @@
         "outputId": "20528bbf-22e0-4ebc-c203-879ae6d07dd2"
       },
       "source": [
-        "from sklearn.metrics import confusion_matrix\n",
+        "#Print confusion matrix\n",
         "print(confusion_matrix(y_test.argmax(axis=1), y_pred.argmax(axis=1)))"
       ],
       "execution_count": null,
@@ -2195,6 +2232,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PrEf_LCYZHOd",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Finetune XLNet with Mixout Regularization"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "eVm6erVphB0V",
@@ -2202,8 +2249,8 @@
         "colab": {}
       },
       "source": [
-        "import torch\n",
-        "from torch.autograd.function import InplaceFunction\n",
+        "#Mixout function which combines vanilla network and dropout network\n",
+        "\n",
         "\n",
         "class Mixout(InplaceFunction):\n",
         "    # target: a weight tensor mixes with a input tensor\n",
@@ -2281,13 +2328,9 @@
         "outputId": "d624f7d1-2478-4f25-9571-5ce021c42553"
       },
       "source": [
-        "import math\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torch.nn.init as init\n",
-        "import torch.nn.functional as F\n",
+        "#MIxlinear module\n",
         "\n",
-        "from torch.nn import Parameter\n",
+        "\n",
         "!ls '/content/gdrive/My Drive/Colab Notebooks/mixout.py'\n",
         "import sys\n",
         "sys.path.append('/content/gdrive/My Drive/Colab Notebooks')\n",
@@ -2352,7 +2395,9 @@
       },
       "source": [
         "#config = XLNetConfig()\n",
-        "        \n",
+        "\n",
+        "#Initialize XLNet model for multiclass classification and add classifier and convert the linear layer to mixlinear with mixout percentage added \n",
+        "\n",
         "class XLNetForMultiLabelSequenceClassification(torch.nn.Module):\n",
         "  \n",
         "  def __init__(self, num_labels=2):\n",
@@ -2609,6 +2654,7 @@
         "colab": {}
       },
       "source": [
+        "#Initialize optimizer\n",
         "optimizer = AdamW(model.parameters(), lr=2e-5, weight_decay=0.01, correct_bias=False)\n",
         "#scheduler = WarmupLinearSchedule(optimizer, warmup_steps=num_warmup_steps, t_total=num_total_steps)  # PyTorch scheduler"
       ],
@@ -2627,6 +2673,7 @@
         "outputId": "3759547a-64c8-4c37-bb8e-1368271e7995"
       },
       "source": [
+        "#Train the model \n",
         "num_epochs=2\n",
         "\n",
         "cwd = os.getcwd()\n",
@@ -2711,7 +2758,7 @@
         "outputId": "e1f35b8b-978d-4d7f-c818-7bc27e38e712"
       },
       "source": [
-        "# Plot loss\n",
+        "# Plot loss vs number of epochs\n",
         "num_epochs = np.arange(len(train_loss_set))\n",
         "\n",
         "fig, ax = plt.subplots(figsize=(10, 5));\n",
@@ -2774,6 +2821,8 @@
         "colab": {}
       },
       "source": [
+        "#Function to generate predictions on test data\n",
+        "\n",
         "def generate_predictions(model, df, num_labels, device=\"cpu\", batch_size=32):\n",
         "  num_iter = math.ceil(df.shape[0]/batch_size)\n",
         "  \n",
@@ -2812,6 +2861,7 @@
         "outputId": "006069c0-0688-4cf9-cf34-f4ce1fc8325b"
       },
       "source": [
+        "#Generate predictions\n",
         "num_labels = len(label_cols)\n",
         "pred_probs = generate_predictions(model, test, num_labels, device=\"cuda\", batch_size=32)\n",
         "pred_probs"
@@ -2899,7 +2949,7 @@
         "outputId": "963c34a1-ec4a-46ee-c38b-5eefaf33eab1"
       },
       "source": [
-        "from sklearn.metrics import accuracy_score\n",
+        "#Print accuracy score\n",
         "y_test=test.iloc[:,1:4].values\n",
         "accuracy_score(y_test,s)"
       ],
@@ -2931,7 +2981,7 @@
         "outputId": "e8e549c3-b344-400c-f7e9-79ca90eb8345"
       },
       "source": [
-        "from sklearn.metrics import classification_report\n",
+        "#Print classification report\n",
         "print('\\nClassification Report\\n')\n",
         "y_pred=np.round(pred_probs)\n",
         "print(classification_report(y_test, s, target_names=['Negative', 'Neutral', 'Positive']))"
@@ -2980,7 +3030,7 @@
         "outputId": "05473720-8730-4a73-905d-6b424850772b"
       },
       "source": [
-        "from sklearn.metrics import confusion_matrix\n",
+        "#Print confusion matrix\n",
         "print(confusion_matrix(y_test.argmax(axis=1), y_pred.argmax(axis=1)))"
       ],
       "execution_count": null,
